# RTGD-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  Editor.sln  README.md  RTGD-Engine.sln  main.cpp
Assets/Materials/: Cube.mat  Floor.mat  Helmet.mat  Spheres.mat
Assets/Scenes/: Additive.scene  Default.scene
Editor/: App.axaml  App.axaml.cs  Editor.csproj  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  ViewLocator.cs  app.manifest
Editor/Controls/: EngineViewportHost.cs
Editor/Converters/: EntityRenamingConverter.cs
Editor/Inspector/: InspectorModels.cs  InspectorPanel.xaml  InspectorPanel.xaml.cs
Editor/Interop/: EngineKey.cs  EngineNative.cs  NativeInterop.cs
Editor/Models/: Entity.cs  EntityTree.cs
Editor/Scene/: SceneHierarchyPanel.xaml  SceneHierarchyPanel.xaml.cs
Editor/Shared/EngineAPI/: EngineLibrary.cs
Editor/Shared/Themes/: Colors.axaml  Splitter.axaml
Editor/ViewModels/: EditorViewModel.cs  MainViewModel.cs  ViewModelBase.cs
Editor/ViewModels/Panels/: AssetBrowserViewModel.cs  HierarchyViewModel.cs  InspectorViewModel.cs  ViewportViewModel.cs
Editor/Viewport/: EngineViewport.cs
Editor/Views/: EditorView.axaml  EditorView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs
Editor/Views/Panels/: AssetBrowserPanel.axaml  AssetBrowserPanel.axaml.cs  HierarchyPanel.axaml  HierarchyPanel.axaml.cs  InspectorPanel.axaml  InspectorPanel.axaml.cs  ViewportPanel.axaml  ViewportPanel.axaml.cs
Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters
Engine/Include/AssetLoader/: AssetLoader.h  AssetManager.h  AssetType.h  MeshImporter.h  PathResolve.h  TextureImporter.h
Engine/Include/AssetLoader/Refs/: AssetRef.h
Engine/Include/Components/: CameraComponent.h  EcsTest.h  GameObject.h  LightComponent.h  MeshComponent.h  RenderComponent.h  SceneEntity.h  TransformComponent.h  UUID.h  UUIDComponent.h  VelocityComponent.h
Engine/Include/Engine/: Engine.h  EngineExport.h  IEngineInterface.h  IGameModule.h  InspectorExports.h  Reflection.h
Engine/Include/Event/: EventBus.h  Events.h
Engine/Include/Input/: EInputAction.h  IInjectable.h  InjectQueue.h  InputSystem.h  KeyboardDevice.h  MouseDevice.h  PhysicalKeyMap.h
Engine/Include/JobSystem/: JobSystem.h
Engine/Include/Platform/: IPlatformWindow.h  PlatformFactory.h  WindowEvent.h  WindowHandle.h
Engine/Include/Platform/Linux/: EmbeddedLinuxWindow.h  LinuxPlatform.h  LinuxPlatformWindow.h
Engine/Include/Platform/Windows/: EmbeddedWindowsWindow.h  WindowsPlatform.h  WindowsPlatformWindow.h
Engine/Include/Render/: ConstBuffers.h  FrameConstants.h  GBuffer.h  GBufferFactory.h  PipelineFactory.h  RenderHandle.h  RenderResourceManager.h  RenderSystem.h  ResourcePool.h  ShaderLoader.h  SimpleMeshFactory.h  Vertex.h
Engine/Include/Render/Graph/: IRenderPass.h  RGBuilder.h  RGResources.h  RGTexturePool.cpp  RGTexturePool.h  RenderContext.h  RenderGraph.h
Engine/Include/Render/Graph/Pass/: CameraPass.h  CompositePass.h  DebugViewPass.h  GBufferPass.h  IRenderPass.h  LightPass.h  ShadowPass.h
Engine/Include/Render/ShadowMap/: ShadowSettings.h
Engine/Include/Scene/: RTGDEntityFactory.h  Scene.h  SceneManager.h
Engine/Include/Systems/: CameraSystem.h  EditorCameraSystem.h  LightSystem.h  MovementSystem.h  TimerSystem.h
Engine/Include/Tools/: Alias.h  Logger.h  MetaTypes.h  RTGDMacros.h
Engine/Source/AssetLoader/: AssetLoader.cpp  AssetManager.cpp  MeshImporter.cpp  TextureImporter.cpp
Engine/Source/AssetLoader/Refs/: AssetRef.cpp
Engine/Source/Engine/: Engine.cpp  EngineExport.cpp  IEngineInterface.cpp  IGameModule.cpp  InspectorExports.cpp  Reflection.cpp
Engine/Source/Event/: EventBus.cpp
Engine/Source/Input/: InjectQueue.cpp  InputSystem.cpp  KeyboardDevice.cpp  MouseDevice.cpp
Engine/Source/JobSystem/: JobSystem.cpp
Engine/Source/Platform/: IPlatformWindow.cpp  PlatformFactory.cpp
Engine/Source/Platform/Linux/: EmbeddedLinuxWindow.cpp  LinuxPlatform.cpp  LinuxPlatformWindow.cpp
Engine/Source/Platform/Windows/: EmbeddedWindowsWindow.cpp  WindowsPlatform.cpp  WindowsPlatformWindow.cpp
Engine/Source/Render/: FrameConstants.cpp  GBufferFactory.cpp  PipelineFactory.cpp  RenderResourceManager.cpp  RenderSystem.cpp  ShaderLoader.cpp  SimpleMeshFactory.cpp
Engine/Source/Render/Graph/: RGResources.cpp  RGTexturePool.cpp  RenderGraph.cpp
Engine/Source/Render/Graph/Pass/: CameraPass.cpp  CompositePass.cpp  DebugViewPass.cpp  GBufferPass.cpp  LightPass.cpp  ShadowPass.cpp
Engine/Source/Scene/: RTGDEntityFactory.cpp  Scene.cpp  SceneManager.cpp
Engine/Source/Systems/: CameraSystem.cpp  EditorCameraSystem.cpp  LightSystem.cpp  MovementSystem.cpp  TimerSystem.cpp
Engine/Source/Tools/: Logger.cpp  MetaTypes.cpp
Game/: CMakeLists.txt  Game.vcxproj
Game/Include/: Game.h
Game/Source/: Game.cpp
RTGD-Engine/: RTGD-Engine.sln
RTGD-Engine/Editor/: MainWindow.xaml  MainWindow.xaml.cs
RTGD-Engine/Editor/Viewport/: EngineViewport.cs
RTGD-Engine/Engine/: Engine.vcxproj.filters
RTGD-Engine/Engine/Include/Engine/: Engine.h  IEngineInterface.h
RTGD-Engine/Engine/Source/Engine/: Engine.cpp
RTGD-Engine/Game/: Game.vcxproj.filters
RTGD-Engine/Game/Include/: Game.h
RTGD-Engine/Game/Source/: Game.cpp
Shaders/: CompositePS.hlsl  DebugViewPS.hlsl  GBufferPS.hlsl  GBufferVS.hlsl  LightingPS.hlsl  LightingVS.hlsl  MeshPS.hlsl  MeshVS.hlsl  ShadowVS.hlsl  TrianglePS.hlsl  TriangleVS.hlsl
